kubernetes/apps/matrix/rtc/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lk-jwt-service
  namespace: matrix
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-app-wildcard
  hostnames:
    - matrix-rtc.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lk-jwt-service
          port: 8080
